--- a/Free particle.ipynb
+++ b/Free particle.ipynb
@@ -96,6 +96,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3df07af3-95c3-4874-bf1e-351663660175",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\psi(x,t) = A * \\exp^{i(kx - wt)}\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "- A: amplitude\n",
+    "- k: wave vector\n",
+    "- x: position\n",
+    "- w: angular frequency\n",
+    "- t: time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0650e29c-b0de-48a3-878c-00beed6c0da0",
@@ -182,6 +200,16 @@
    "metadata": {},
    "source": [
     "**Wave packet**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f10b9325-ea02-4fde-966f-de51a949d68b",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\psi(x,t) = \\sum_n A_n \\exp^{i(k_n x - w_n t)} \n",
+    "$$"
    ]
   },
   {
